force-app/main/default/objects/Operation__c/fields/Take_Over_Bank_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Take_Over_Bank_Account_Name__c</fullName>
    <label>Take Over Bank Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>