force-app/main/default/objects/Operation__c/fields/Take_Over_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Take_Over_Bank_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Take Over Bank Name</label>
    <referenceTo>Master_Bank__c</referenceTo>
    <relationshipLabel>Operations</relationshipLabel>
    <relationshipName>Operations</relationshipName>
    <type>Lookup</type>
</CustomField>