force-app/main/default/objects/Operation__c/fields/take_over_payment_method__c.field-meta.xml
<CustomField>
    <fullName>take_over_payment_method__c</fullName>
    <label>Metode Pembayaran Take Over</label>
    <length>255</length>
    <type>Text</type>
</CustomField>