force-app/main/default/objects/Operation__c/fields/TC_After__c.field-meta.xml
<CustomField>
    <fullName>TC_After__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TC After</label>
    <type>Checkbox</type>
</CustomField>