force-app/main/default/objects/Operation__c/fields/TC_After_Detail__c.field-meta.xml
<CustomField>
    <fullName>TC_After_Detail__c</fullName>
    <label>TC After Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>