force-app/main/default/objects/Operation__c/fields/TDP__c.field-meta.xml
<CustomField>
    <fullName>TDP__c</fullName>
    <label>TDP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>