force-app/main/default/objects/Operation__c/fields/TDP_SPB_Benar__c.field-meta.xml
<CustomField>
    <fullName>TDP_SPB_Benar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TDP SPB Benar</label>
    <type>Checkbox</type>
</CustomField>