force-app/main/default/objects/Operation__c/fields/total_additional_beneficiary_amount__c.field-meta.xml
<CustomField>
    <fullName>total_additional_beneficiary_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>total additional beneficiary amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>