force-app/main/default/objects/Operation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_ID__c</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Activity__c</columns>
    <columns>full_ntf_amount__c</columns>
    <columns>Loan_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>